--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 	<uses-permission android:name= "android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
